@@ -122,6 +122,17 @@ name|org
 operator|.
 name|apache
 operator|.
+name|log4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
 name|solr
 operator|.
 name|cloud
@@ -236,6 +247,19 @@ name|apache
 operator|.
 name|solr
 operator|.
+name|logging
+operator|.
+name|MDCUtils
+import|;
+end_import
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
 name|util
 operator|.
 name|DefaultSolrThreadFactory
@@ -268,6 +292,23 @@ operator|.
 name|slf4j
 operator|.
 name|LoggerFactory
+import|;
+end_import
+begin_import
+import|import static
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|cloud
+operator|.
+name|ZkStateReader
+operator|.
+name|CORE_NAME_PROP
 import|;
 end_import
 begin_class
@@ -1168,6 +1209,18 @@ operator|!=
 literal|null
 condition|)
 block|{
+name|MDCUtils
+operator|.
+name|setCore
+argument_list|(
+name|core
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|background
@@ -1187,6 +1240,17 @@ name|thread
 operator|.
 name|run
 argument_list|()
+expr_stmt|;
+block|}
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+name|CORE_NAME_PROP
+argument_list|)
 expr_stmt|;
 block|}
 block|}
