@@ -871,6 +871,15 @@ name|LoggerFactory
 import|;
 end_import
 begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
 import|import static
 name|org
 operator|.
@@ -2768,6 +2777,38 @@ argument_list|,
 name|name
 argument_list|)
 decl_stmt|;
+try|try
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"RestoreCore.core"
+argument_list|,
+name|core
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"RestoreCore.backupLocation"
+argument_list|,
+name|location
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"RestoreCore.backupName"
+argument_list|,
+name|name
+argument_list|)
+expr_stmt|;
 name|restoreFuture
 operator|=
 name|restoreExecutor
@@ -2781,6 +2822,31 @@ name|currentRestoreName
 operator|=
 name|name
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"RestoreCore.core"
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"RestoreCore.backupLocation"
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"RestoreCore.backupName"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 DECL|method|getRestoreStatus
 specifier|private
