@@ -847,6 +847,15 @@ name|LoggerFactory
 import|;
 end_import
 begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
 import|import static
 name|org
 operator|.
@@ -1509,6 +1518,37 @@ argument_list|,
 name|taskObject
 argument_list|)
 decl_stmt|;
+try|try
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"CoreAdminHandler.asyncId"
+argument_list|,
+name|taskId
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+name|action
+operator|!=
+literal|null
+condition|)
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"CoreAdminHandler.action"
+argument_list|,
+name|action
+operator|.
+name|name
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|parallelExecutor
 operator|.
 name|execute
@@ -1516,6 +1556,24 @@ argument_list|(
 name|parallelHandlerThread
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"CoreAdminHandler.asyncId"
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"CoreAdminHandler.action"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 DECL|method|handleRequestInternal
