@@ -552,6 +552,15 @@ operator|.
 name|Strings
 import|;
 end_import
+begin_import
+import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
 begin_class
 DECL|class|HttpShardHandler
 specifier|public
@@ -1466,6 +1475,51 @@ return|;
 block|}
 block|}
 decl_stmt|;
+try|try
+block|{
+if|if
+condition|(
+name|shard
+operator|!=
+literal|null
+condition|)
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"ShardRequest.shards"
+argument_list|,
+name|shard
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|urls
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|urls
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"ShardRequest.urlList"
+argument_list|,
+name|urls
+operator|.
+name|toString
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 name|pending
 operator|.
 name|add
@@ -1478,6 +1532,24 @@ name|task
 argument_list|)
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"ShardRequest.shards"
+argument_list|)
+expr_stmt|;
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"ShardRequest.urlList"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 comment|/**    * Subclasses could modify the request based on the shard    */
 DECL|method|makeQueryRequest
