@@ -781,6 +781,15 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -6040,6 +6049,27 @@ operator|.
 name|getUpdateExecutor
 argument_list|()
 decl_stmt|;
+try|try
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"DistributedUpdateProcessor.replicaUrlToRecover"
+argument_list|,
+name|error
+operator|.
+name|req
+operator|.
+name|node
+operator|.
+name|getNodeProps
+argument_list|()
+operator|.
+name|getCoreUrl
+argument_list|()
+argument_list|)
+expr_stmt|;
 name|executor
 operator|.
 name|execute
@@ -6047,6 +6077,17 @@ argument_list|(
 name|lirThread
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"DistributedUpdateProcessor.replicaUrlToRecover"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 if|if
 condition|(
