@@ -559,6 +559,15 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -903,7 +912,7 @@ argument_list|(
 operator|new
 name|SolrjNamedThreadFactory
 argument_list|(
-literal|"CloudSolrServer ThreadPool"
+literal|"CloudSolrClient ThreadPool"
 argument_list|)
 argument_list|)
 decl_stmt|;
@@ -2638,6 +2647,17 @@ operator|.
 name|getValue
 argument_list|()
 decl_stmt|;
+try|try
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"CloudSolrClient.url"
+argument_list|,
+name|url
+argument_list|)
+expr_stmt|;
 name|responseFutures
 operator|.
 name|put
@@ -2686,6 +2706,17 @@ block|}
 block|)
 block|)
 empty_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"CloudSolrClient.url"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 for|for
 control|(
