@@ -373,6 +373,15 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -2005,6 +2014,20 @@ operator|)
 condition|)
 block|{
 comment|// We need more runners, so start a new one.
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"ConcurrentUpdateSolrClient.url"
+argument_list|,
+name|client
+operator|.
+name|getBaseURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|Runner
 name|r
 init|=
@@ -2026,6 +2049,17 @@ argument_list|(
 name|r
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"ConcurrentUpdateSolrClient.url"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 else|else
 block|{
@@ -2213,6 +2247,20 @@ operator|+
 literal|" adding more runners to process remaining requests on queue"
 argument_list|)
 expr_stmt|;
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"ConcurrentUpdateSolrClient.url"
+argument_list|,
+name|client
+operator|.
+name|getBaseURL
+argument_list|()
+argument_list|)
+expr_stmt|;
+try|try
+block|{
 name|Runner
 name|r
 init|=
@@ -2234,6 +2282,17 @@ argument_list|(
 name|r
 argument_list|)
 expr_stmt|;
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"ConcurrentUpdateSolrClient.url"
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 block|}
 block|}
