@@ -597,6 +597,15 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -1370,6 +1379,15 @@ argument_list|)
 decl_stmt|;
 try|try
 block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"HttpSolrClient.url"
+argument_list|,
+name|baseUrl
+argument_list|)
+expr_stmt|;
 name|mrr
 operator|.
 name|future
@@ -1419,6 +1437,13 @@ name|pool
 operator|.
 name|shutdown
 argument_list|()
+expr_stmt|;
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"HttpSolrClient.url"
+argument_list|)
 expr_stmt|;
 block|}
 assert|assert
