@@ -187,6 +187,15 @@ import|;
 end_import
 begin_import
 import|import
+name|org
+operator|.
+name|slf4j
+operator|.
+name|MDC
+import|;
+end_import
+begin_import
+import|import
 name|java
 operator|.
 name|io
@@ -1309,6 +1318,17 @@ name|server
 operator|=
 name|serverStr
 expr_stmt|;
+try|try
+block|{
+name|MDC
+operator|.
+name|put
+argument_list|(
+literal|"LBHttpSolrClient.url"
+argument_list|,
+name|serverStr
+argument_list|)
+expr_stmt|;
 name|HttpSolrClient
 name|client
 init|=
@@ -1345,6 +1365,17 @@ return|return
 name|rsp
 return|;
 comment|// SUCCESS
+block|}
+block|}
+finally|finally
+block|{
+name|MDC
+operator|.
+name|remove
+argument_list|(
+literal|"LBHttpSolrClient.url"
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 comment|// try the servers we previously skipped
