@@ -464,6 +464,15 @@ name|MDCAwareThreadPoolExecutor
 extends|extends
 name|ThreadPoolExecutor
 block|{
+DECL|field|MAX_THREAD_NAME_LEN
+specifier|private
+specifier|static
+specifier|final
+name|int
+name|MAX_THREAD_NAME_LEN
+init|=
+literal|512
+decl_stmt|;
 DECL|method|MDCAwareThreadPoolExecutor
 specifier|public
 name|MDCAwareThreadPoolExecutor
@@ -658,6 +667,55 @@ operator|.
 name|getCopyOfContextMap
 argument_list|()
 decl_stmt|;
+name|String
+name|ctxStr
+init|=
+name|submitterContext
+operator|!=
+literal|null
+operator|&&
+operator|!
+name|submitterContext
+operator|.
+name|isEmpty
+argument_list|()
+condition|?
+name|submitterContext
+operator|.
+name|toString
+argument_list|()
+operator|.
+name|replace
+argument_list|(
+literal|"/"
+argument_list|,
+literal|"//"
+argument_list|)
+else|:
+literal|""
+decl_stmt|;
+specifier|final
+name|String
+name|submitterContextStr
+init|=
+name|ctxStr
+operator|.
+name|length
+argument_list|()
+operator|<=
+name|MAX_THREAD_NAME_LEN
+condition|?
+name|ctxStr
+else|:
+name|ctxStr
+operator|.
+name|substring
+argument_list|(
+literal|0
+argument_list|,
+name|MAX_THREAD_NAME_LEN
+argument_list|)
+decl_stmt|;
 name|super
 operator|.
 name|execute
@@ -686,11 +744,35 @@ operator|.
 name|getCopyOfContextMap
 argument_list|()
 decl_stmt|;
+specifier|final
+name|Thread
+name|currentThread
+init|=
+name|Thread
+operator|.
+name|currentThread
+argument_list|()
+decl_stmt|;
+specifier|final
+name|String
+name|oldName
+init|=
+name|currentThread
+operator|.
+name|getName
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|submitterContext
 operator|!=
 literal|null
+operator|&&
+operator|!
+name|submitterContext
+operator|.
+name|isEmpty
+argument_list|()
 condition|)
 block|{
 name|MDC
@@ -698,6 +780,17 @@ operator|.
 name|setContextMap
 argument_list|(
 name|submitterContext
+argument_list|)
+expr_stmt|;
+name|currentThread
+operator|.
+name|setName
+argument_list|(
+name|oldName
+operator|+
+literal|"-processing-"
+operator|+
+name|submitterContextStr
 argument_list|)
 expr_stmt|;
 block|}
@@ -742,6 +835,13 @@ name|clear
 argument_list|()
 expr_stmt|;
 block|}
+name|currentThread
+operator|.
+name|setName
+argument_list|(
+name|oldName
+argument_list|)
+expr_stmt|;
 block|}
 block|}
 block|}
